tests/field/set_on_struct.rev
struct Foo {}
Foo.bar = "value" // error: only structure instances have properties